Added support of Lunar Client and Badlion Client

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
           <id>placeholderapi</id>
           <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
       </repository>
+      <repository>
+          <id>lunarclient</id>
+          <url>https://repo.lunarclient.dev</url>
+      </repository>
   </repositories>
 
   <dependencies>
