--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -85,8 +85,8 @@ helpAdmin:
   - "&8* &3/gang kick <player> &7- &fKick a member from your gang"
   - "&8* &3/gang leave &7- &fLeave your current gang"
   - "&8* &3/gang rename <newName> &7- &fRename your gang"
-  - "&8* &3/gang show &7- &fShow information about your gang"
-  - "&8* &3/gang info <gangName> &7- &fShow information about another gang"
+  - "&8* &3/gang show <gangName> &7- &fShow information about your gang"
+  - "&8* &3/gang info &7- &fShow information about your gang"
   - "&8* &3/gang chat &7- &fToggle gang chat"
   - ""
   - "&c&lADMIN &7(bsgang.admin)"
