--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,5 @@ version: '${project.version}'
 main: dev.betterstudios.it.Main
 softdepend:
   - PlaceholderAPI
+  - LunarClient-API
+  - BadlionClientModAPI
