Removed empty line and added clickable join message

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -22,6 +22,7 @@ not_invited: "{prefix} &cThere are no pending invites!"
 error_during_accepting: "{prefix} &cAn error occurred during acceptance, please verify the player's status!"
 message_accepted: "{prefix} &aAccepted!"
 target_not_in_your_team: "{prefix} &cTarget is not in your gang!"
+areal_moderator: "{prefix} &cTarget is areal a moderator!"
 moderator_added: "{prefix} &aYou have been promoted to moderator!"
 not_moderator: "{prefix} &cYou are not a moderator!"
 demoted: "{prefix} &aYou have demoted {player}!"
